home- index.html: update

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Linksys Roter Custom Firmware Images
-subtitle: WRT3200ACM 
+title: PureFusionWRT OpenWRT
+subtitle: Linksys Routers
 ---
